# loldog

./: LICENSE  Makefile  README.md
src/: CMakeLists.txt  Makefile  config.h.in  linelist.c  linelist.h  lol.c  lol.h  main.c  options.c  options.h  utils.c  utils.h
